--- a/example.css
+++ b/example.css
@@ -15,6 +15,7 @@ div.selectr {
 	font-weight: 400;
 	background-color:#fff;
 	margin-bottom:35px;
+	width:500px;
 }
 span.selectr-display {
 	border: 1px solid #ccc;
@@ -27,7 +28,6 @@ span.selectr-btn {
 	position:absolute;
 	right:15px;
 	top:15px;
-	width: 30px;
 	text-align: center;
 	font-size: 20px;
 	-webkit-user-select: none;
@@ -50,10 +50,10 @@ ul.selectr-list {
 	margin: 0;
 	list-style: none inside none;
 	padding: 0;
+	width:100%;
 }
 li.selectr-option {
 	margin:0;
-	display: block;
 	padding:15px 15px 12px;
 	border-top: 1px solid #ddd;
 }
